--- a/indexed-traversable-instances/indexed-traversable-instances.cabal
+++ b/indexed-traversable-instances/indexed-traversable-instances.cabal
@@ -49,9 +49,17 @@ library
     , OneTuple              >=0.3      && <0.4
     , tagged                >=0.8.6    && <0.9
     , unordered-containers  >=0.2.8.0  && <0.3
-    , vector                >=0.12.1.2 && <0.13
+    , vector                >=0.12.1.2 && <0.14
 
   exposed-modules:  Data.Functor.WithIndex.Instances
+  Default-Extensions:
+        PartialTypeConstructors
+        FlexibleContexts
+        -- Needed for PTC annotations
+        QuantifiedConstraints
+        TypeOperators
+        ExplicitNamespaces
+        UndecidableInstances
 
 test-suite safe
   type:             exitcode-stdio-1.0
